--- a/package.json
+++ b/package.json
@@ -4,23 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require ts-node/register test/**/*.spec.ts"
+    "test": "mocha --require ts-node/register test/**/*.spec.ts",
+    "start": "ts-node src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "tslint-config-airbnb": "^5.11.2"
   },
   "devDependencies": {
     "@stryker-mutator/core": "^2.1.0",
+    "@stryker-mutator/html-reporter": "^2.1.0",
     "@stryker-mutator/mocha-framework": "^2.1.0",
     "@stryker-mutator/mocha-runner": "^2.1.0",
     "@stryker-mutator/typescript": "^2.1.0",
+    "@types/body-parser": "^1.17.1",
     "@types/chai": "^4.2.3",
+    "@types/chai-http": "^4.2.0",
+    "@types/express": "^4.17.1",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^6.2.1",
     "stryker-api": "^0.24.1",
+    "stryker-html-reporter": "^0.18.1",
+    "stryker-mocha-framework": "^0.15.1",
+    "stryker-mocha-runner": "^0.17.1",
+    "stryker-typescript": "^0.18.1",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   }
