--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/chai": "^4.2.3",
     "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.1",
+    "@types/lodash": "^4.14.141",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
